fix navbar covering content

--- a/app/assets/stylesheets/challenges.scss
+++ b/app/assets/stylesheets/challenges.scss
@@ -3,6 +3,7 @@
   width: 1050px;
   margin-right: auto;
   color: #5f5f5f;
+  padding-left: 20px;
 
   .row {
     margin: 0;
@@ -217,6 +218,7 @@
 
 .completed-challenges {
   min-height: 800px;
+  padding-left: 20px;
 
   .title {
     font-size: 24px;
