--- a/app/assets/stylesheets/reflections.scss
+++ b/app/assets/stylesheets/reflections.scss
@@ -1,6 +1,7 @@
 .reflections {
   min-height: 800px;
   min-width: 940px;
+  padding-left: 20px;
 
   input[type=number]::-webkit-inner-spin-button,
   input[type=number]::-webkit-outer-spin-button {
