--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -52,10 +52,10 @@ img {
 }
 
 a {
-  color: #0E803A;
+  color: #3B8300;
 
   &:hover {
-    color: #0E803A;
+    color: #3B8300;
     text-decoration: underline;
   }
 }
